--- a/src-tauri/Release.entitlements
+++ b/src-tauri/Release.entitlements
@@ -12,15 +12,11 @@
     <true/>
     <key>com.apple.security.automation.apple-events</key>
     <true/>
-    <key>com.apple.security.device.usb</key>
-    <true/>
-    <key>com.apple.security.device.camera</key>
-    <true/>
-    <key>com.apple.security.network.server</key>
-    <true/>
     <key>com.apple.security.network.client</key>
     <true/>
     <key>com.apple.security.inherit</key>
+    <true/>
+    <key>com.apple.security.files.user-selected.read-write</key>
     <true/>
   </dict>
 </plist>
