--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "fir"
-version = "0.0.0"
-description = "A Tauri App"
-authors = ["you"]
+name = "noise-reducer"
+version = "0.0.3"
+description = "A simple noise reducer."
+authors = ["YouXam <youxam@outlook.com>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
